namespace Bullets
{
    interface IBullet
    {
    }
}
