using System;

namespace Damages
{
    [Serializable]
    public struct Damage
    {
        public int Value;
    }
}