namespace Damages
{
    interface IDamageApplicable
    {
        void ApplyDamage(Damage damage);
    }
}
